public/css/themes/secret-santa.css
/* Secret Santa Mode Theme Overrides */
#left-container.secret {
  flex: 1 1 0%;
  min-width: 0;
  display: flex;
  justify-content: flex-start;
  flex-wrap: wrap;
  #name-list,
  .household,
  .ghost-house {
    width: 333px;
    margin: 10px;
    box-sizing: border-box;
  }
  .name-container {
    min-height: 5rem;
  }
  .household {
    position: relative;
    padding-bottom: 20px;
  }
  .deleteHouse {
    position: relative;
    top: -17px;
  }
  .household select {
    position: absolute;
    bottom: 5px;
    width: 90%;
  }
  #name-list {
    & select {
      margin-top: 15px;
    }
  }
}

